With three bugs

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,17 @@
 # Add unit tests for the project
 find_package(Catch2 QUIET)
 
+
+# Files were moved from root to here, so its co add_executables are just also moved to here
+# add_executable(test_dotlin test_dotlin.cpp)
+# target_link_libraries(test_dotlin PRIVATE dotlin_lib)
+
+# add_executable(simple_test simple_test.cpp)
+# target_link_libraries(simple_test PRIVATE dotlin_lib)
+
+# add_executable(lexer_test lexer_test.cpp)
+# target_link_libraries(lexer_test PRIVATE dotlin_lib)
+
 if(Catch2_FOUND)
     # If Catch2 is available, create comprehensive tests
     add_executable(dotlin_tests
